Closed Bug 924600 Opened 11 years ago Closed 11 years ago

WebGL.getUniform should not throw

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla28

People

(Reporter: bjacob, Assigned: bjacob)

Details

(Whiteboard: webgl-conformance [qa-])

Attachments

(1 file)

Attached patch patchSplinter Review
Some of the error reporting in WebGL.getUniform dates back to days when the earth crust was still warm from meteor impacts.
Attachment #814541 - Flags: review?(jgilbert)
Comment on attachment 814541 [details] [diff] [review]
patch

Review of attachment 814541 [details] [diff] [review]:
-----------------------------------------------------------------

::: content/canvas/src/WebGLContextGL.cpp
@@ +1855,5 @@
>          }
>      }
>  
>      if (index == uniforms) {
> +        GenerateWarning("getUniform: internal error: hit an OpenGL driver bug");

I dream of a day when we get these reported via telemetry.
Attachment #814541 - Flags: review?(jgilbert) → review+
http://hg.mozilla.org/integration/mozilla-inbound/rev/eb6a7dcefb2f
Assignee: nobody → bjacob
Target Milestone: --- → mozilla28
https://hg.mozilla.org/mozilla-central/rev/eb6a7dcefb2f
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Whiteboard: webgl-conformance → webgl-conformance [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: