Bug 924600 - WebGL.getUniform should not throw - r=jgilbert